--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,13 @@ elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     set(HOME "$ENV{HOME}")
     find_package( Boost REQUIRED )
     include_directories( ${Boost_INCLUDE_DIRS} )
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+    set(HOME "$ENV{HOME}")
 endif()
 message(STATUS "HOME              = ${HOME}")
 
-if(${CMAKE_SYSTEM_NAME} STREQUAL "CrayLinuxEnvironment")
+# if(${CMAKE_SYSTEM_NAME} STREQUAL "CrayLinuxEnvironment")
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     #set(CRAYPE_LINK_TYPE "dynamic")
     set(CMAKE_CXX_COMPILER "CC")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -mcmodel=medium -fpic -dynamic -shared-intel -mkl")
