--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "picojson"]
 	path = picojson
 	url = https://github.com/kazuho/picojson
+[submodule "googletest"]
+	path = googletest
+	url = github.com:google/googletest.git
