Gridの粒子保持の方法をunique_ptrからvector<vector<>>に変更.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ set(SRCS
     "src/environment.cpp"
     "src/utils.cpp"
     "src/grid.cpp"
+    "src/dataio.cpp"
 )
 
 add_executable(tdpic ${SRCS})
