--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,3 +124,9 @@ add_dependencies(tdpic copy_sample_input)
 message(STATUS "CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
 message(STATUS "CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
 
+if(${WITH_TEST})
+    enable_testing()
+    add_subdirectory(${CMAKE_SOURCE_DIR}/googletest)
+    include_directories(${CMAKE_SOURCE_DIR}/googletest/googletest/include)
+    add_subdirectory(test)
+endif()
