--- a/test/Particle/CMakeLists.txt
+++ b/test/Particle/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable(particle_test ${SRCS})
 target_link_libraries(particle_test
     gtest
     gtest_main
+    ${MKL_INTEL_LP64}
+    ${MKL_CORE}
     )
 
 add_test(
