--- a/src/input.json.sample
+++ b/src/input.json.sample
@@ -3,7 +3,7 @@
         "max_iteration": 100,
         "job_type": "new",
         "solver_type": "EM",
-        "boundary_condition": "DDDDDD",
+        "boundary": "DDDDDD",
         "dimension": "3D",
         "nx": 16,
         "ny": 16,
