--- a/test/Field/CMakeLists.txt
+++ b/test/Field/CMakeLists.txt
@@ -2,12 +2,15 @@ set(FIELD_TEST_SRCS
     "field_test.cpp"
 )
 
-add_executable(field_test ${FIELD_TEST_SRCS})
+add_executable(field_test ${SRCS} ${FIELD_TEST_SRCS})
 
 target_link_libraries(field_test
     gtest
     gtest_main
     ${MKL_INTEL_LP64}
+    ${MKL_BLAS95}
+    ${MKL_LAPACK}
+    ${MKL_SEQ}
     ${MKL_CORE}
     )
 
