--- a/test/Field/CMakeLists.txt
+++ b/test/Field/CMakeLists.txt
@@ -4,15 +4,7 @@ set(FIELD_TEST_SRCS
 
 add_executable(field_test ${SRCS} ${FIELD_TEST_SRCS})
 
-target_link_libraries(field_test
-    gtest
-    gtest_main
-    ${MKL_INTEL_LP64}
-    ${MKL_BLAS95}
-    ${MKL_LAPACK}
-    ${MKL_SEQ}
-    ${MKL_CORE}
-    )
+target_link_libraries(field_test gtest gtest_main ${CXX_REQUIRED_LIBS})
 
 add_test(
     NAME field
