--- a/test/Particle/CMakeLists.txt
+++ b/test/Particle/CMakeLists.txt
@@ -4,15 +4,7 @@ set(PARTICLE_TEST_SRCS
 
 add_executable(particle_test ${SRCS} ${PARTICLE_TEST_SRCS})
 
-target_link_libraries(particle_test
-    gtest
-    gtest_main
-    ${MKL_INTEL_LP64}
-    ${MKL_BLAS95}
-    ${MKL_LAPACK}
-    ${MKL_SEQ}
-    ${MKL_CORE}
-    )
+target_link_libraries(particle_test gtest gtest_main ${CXX_REQUIRED_LIBS})
 
 add_test(
     NAME particle
