--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
     if(${DEBUG})
         set(CMAKE_BUILD_TYPE Debug)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -Wall -mcmodel=medium -fpic -dynamic -shared-intel -mkl")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -W -mcmodel=medium -fpic -dynamic -shared-intel -mkl")
         add_definitions(-DDEBUG)
     else()
         set(CMAKE_BUILD_TYPE Release)
@@ -73,7 +73,7 @@ else()
 
     if(${DEBUG})
         set(CMAKE_BUILD_TYPE Debug)
-        set(CMAKE_CXX_FLAGS "-O0 -g -Wall -m64")
+        set(CMAKE_CXX_FLAGS "-O0 -g -W -m64")
         add_definitions(-DDEBUG)
     else()
         set(CMAKE_BUILD_TYPE Release)
