MPI上でGDBを走らせるスクリプトを追加した。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 project(TDPIC)
 
 # options
-option(BUILD_FOR_HOST    "Build for the login node"      ON)
-option(COPY_SAMPLE_INPUT "Copy input.json to build dir"  ON)
-option(DEBUG             "Build in Debug Mode"           ON)
+option(BUILD_FOR_HOST    "Build for the login node."            ON)
+option(COPY_GDB_MPIRUN_SCRIPT   "Copy gdb_mpirun.sh to build dir." ON)
+option(COPY_SAMPLE_INPUT "Copy input.json to build dir."        ON)
+option(DEBUG             "Build in Debug Mode."                 ON)
 
 set(CXX_REQUIRED_LIBS "")
 
@@ -126,6 +127,16 @@ file(GLOB SRCS src/*.cpp)
 
 add_executable(tdpic ${SRCS})
 target_link_libraries(tdpic ${CXX_REQUIRED_LIBS})
+
+if(${COPY_GDB_MPIRUN_SCRIPT})
+    add_custom_command(
+        OUTPUT copy_gdb_mpirun_command
+        COMMAND cp "${CMAKE_CURRENT_SOURCE_DIR}/scripts/gdb_mpirun.sh" "${CMAKE_BINARY_DIR}/gdb_mpirun.sh"
+    )
+
+    add_custom_target(copy_gdb_mpirun DEPENDS copy_gdb_mpirun_command)
+    add_dependencies(tdpic copy_gdb_mpirun)
+endif()
 
 if(${COPY_SAMPLE_INPUT})
     add_custom_command(
