--- a/test/Field/CMakeLists.txt
+++ b/test/Field/CMakeLists.txt
@@ -2,7 +2,7 @@ set(FIELD_TEST_SRCS
     "field_test.cpp"
 )
 
-add_executable(field_test ${SRCS} ${FIELD_TEST_SRCS})
+add_executable(field_test ${SRCS} ${TEST_FIXTURE_SRCS} ${FIELD_TEST_SRCS})
 
 target_link_libraries(field_test gtest gtest_main ${CXX_REQUIRED_LIBS})
 
