--- a/test/Particle/CMakeLists.txt
+++ b/test/Particle/CMakeLists.txt
@@ -2,7 +2,7 @@ set(PARTICLE_TEST_SRCS
     "particle_test.cpp"
 )
 
-add_executable(particle_test ${SRCS} ${PARTICLE_TEST_SRCS})
+add_executable(particle_test ${SRCS} ${TEST_FIXTURE_SRCS} ${PARTICLE_TEST_SRCS})
 
 target_link_libraries(particle_test gtest gtest_main ${CXX_REQUIRED_LIBS})
 
