--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/kazuho/picojson
 [submodule "googletest"]
 	path = googletest
-	url = github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
