--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,12 @@ message(STATUS "CMAKE_SYSTEM_NAME = ${CMAKE_SYSTEM_NAME}")
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     set(HOME "$ENV{USERPROFILE}")
     set(CMAKE_SUPPRESS_REGENERATION true)
+
+    find_package( Boost REQUIRED COMPONENTS filesystem system)
+    include_directories( ${Boost_INCLUDE_DIRS} )
+    set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${Boost_LIBRARIES})
+    message(STATUS "Boost: ${Boost_LIBRARIES}")
+
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     set(HOME "$ENV{HOME}")
     find_package( Boost REQUIRED COMPONENTS filesystem system)
@@ -77,8 +83,54 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
     set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${LIB_SILO})
     message(STATUS "CXX_REQUIRED_LIBS: ${CXX_REQUIRED_LIBS}")
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+
+    # MS MPI
+    # set(CMAKE_C_COMPILER mpicc)
+    # set(CMAKE_CXX_COMPILER mpicxx)
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 ${CXX_WARNING_FLAGS} -m64")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -m64")
+
+    # MS MPI Dirs
+    set(MSMPI_INCDIR "C:/Program\ Files\ (x86)/Microsoft\ SDKs/MPI/Include")
+    set(MSMPI_LIBDIR "C:/Program\ Files\ (x86)/Microsoft\ SDKs/MPI/Lib/x64")
+    link_directories(${MSMPI_LIBDIR})
+    include_directories(${MSMPI_INCDIR})
+    find_library(LIB_MSMPI msmpi HINTS ${MSMPI_LIBDIR})
+    set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${LIB_MSMPI})
+
+    if(${DEBUG})
+        set(CMAKE_BUILD_TYPE Debug)
+        add_definitions(-DDEBUG)
+    else()
+        set(CMAKE_BUILD_TYPE Release)
+    endif()
+
+    # options for mkl
+    set(MKLROOT "C:/Program\ Files\ (x86)/IntelSWTools/compilers_and_libraries/windows/mkl")
+    set(MKL_INCLUDE_DIRS "${MKLROOT}/include")
+    set(MKL_LIBRARIES "${MKLROOT}/lib/intel64")
+    # add_definitions(-DMKL_ILP64)
+    link_directories(${MKL_LIBRARIES})
+    include_directories(${MKL_INCLUDE_DIRS})
+    find_library(MKL_CORE mkl_core HINTS ${MKL_LIBRARIES})
+    find_library(MKL_INTEL_LP64 mkl_intel_lp64 HINTS ${MKL_LIBRARIES})
+    find_library(MKL_INTEL_THREAD mkl_intel_thread HINTS ${MKL_LIBRARIES})
+    find_library(MKL_BLAS95 mkl_blas95_lp64 HINTS ${MKL_LIBRARIES})
+    find_library(MKL_SEQ mkl_sequential HINTS ${MKL_LIBRARIES})
+    find_library(MKL_LAPACK mkl_lapack95_lp64 HINTS ${MKL_LIBRARIES})
+
+    set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${MKL_INTEL_LP64} ${MKL_BLAS95} ${MKL_LAPACK} ${MKL_SEQ} ${MKL_CORE})
+
+    # options for hdf5
+    set(HOME_ROOT "${HOME}/local/")
+    set(HOME_LIBRARIES "${HOME_ROOT}/lib")
+    find_library(LIB_SILO silo HINTS ${HOME_LIBRARIES})
+
+    set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${LIB_SILO})
+    message(STATUS "CXX_REQUIRED_LIBS: ${CXX_REQUIRED_LIBS}")
 else()
-    # Flags for Local build
+    # Flags for Darwin build
 
     # OpenMPI
     set(CMAKE_C_COMPILER /usr/local/bin/mpicc)
