--- a/src/input.json.sample
+++ b/src/input.json.sample
@@ -39,6 +39,7 @@
         "plot_rho_width": 1,
         "plot_efield_width": 1,
         "plot_bfield_width": 1,
+        "plot_density_width": 1,
         "plot_particle_width": 1,
         "plot_energy_width": 1
     }
