計算回数上限の変数名をmax_iterationからmax_timestepに変更.

--- a/src/input.json.sample
+++ b/src/input.json.sample
@@ -1,6 +1,6 @@
 {
     "Environment": {
-        "max_iteration": 10,
+        "max_timestep": 10,
         "job_type": "new",
         "solver_type": "EM",
         "boundary": "DDDDDD",
