--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "googletest"]
 	path = googletest
 	url = https://github.com/google/googletest.git
+[submodule "HighFive"]
+	path = HighFive
+	url = github.com:BlueBrain/HighFive
