--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ set(LOCAL_LIBRARYDIR "NOTFOUND" CACHE PATH "Specified local library path to incl
 
 execute_process (COMMAND date +%Y%m%d OUTPUT_VARIABLE CMAKE_DATE OUTPUT_STRIP_TRAILING_WHITESPACE)
 execute_process (COMMAND git rev-parse --short HEAD OUTPUT_VARIABLE CMAKE_REVISION OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process (COMMAND git describe --abbrev=0 OUTPUT_VARIABLE CMAKE_TAG OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-set(TDPIC_VERSION 0.9.0)
+set(TDPIC_VERSION ${CMAKE_TAG})
 set(TDPIC_DATE ${CMAKE_DATE})
 set(TDPIC_REVISION ${CMAKE_REVISION})
 
